Adding news summaries drafted by Leo/Llama 3.1 8B

--- a/2025/2025-08-10-wir.md
+++ b/2025/2025-08-10-wir.md
@@ -18,13 +18,13 @@
 
 <!-- Riff on Trump/Intel brouhaha. Some useful links from WSJ: -->
 
-- https://www.wsj.com/tech/intel-ceo-lip-bu-tan-trump-board-9cc08631?st=KUDbuC&reflink=desktopwebshare_permalink
+- Intel's CEO, Lip-Bu Tan, is facing pressure from the company's board and a surprise attack from former President Trump, who has called for Tan's ouster citing "conflict" due to his business ties to China. The tensions come as Tan has been at odds with the board over strategies to revive the tech giant, including whether to stay in the manufacturing business and how to invest in artificial intelligence. ([Wall Street Journal](https://www.wsj.com/tech/intel-ceo-lip-bu-tan-trump-board-9cc08631?st=KUDbuC&reflink=desktopwebshare_permalink))<!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- https://www.wsj.com/tech/intel-new-ceo-lip-bu-tan-five-things-214c41b6?st=Ls9Bxm&reflink=desktopwebshare_permalink
+- Intel's new CEO, Lip-Bu Tan, brings a wealth of experience to the role, having previously led Cadence Design Systems and founded Walden International, a venture capital firm with ties to China. Tan's appointment comes as Intel faces challenges in the industry, with some speculating that the company may break up its manufacturing and product businesses. ([Wall Street Journal](https://www.wsj.com/tech/intel-new-ceo-lip-bu-tan-five-things-214c41b6?st=Ls9Bxm&reflink=desktopwebshare_permalink))<!-- Draft news summary by Leo/Llama 3.1 8B -->  
 
-- https://www.wsj.com/tech/five-things-to-know-about-the-intel-ceos-links-to-china-c8d5ce1a?st=uRw6K2&reflink=desktopwebshare_permalink
+- Intel CEO Lip-Bu Tan is facing scrutiny over his ties to China, particularly his past involvement with companies that sold technology to Chinese state-controlled research institutions, including one accused of developing military systems. Tan has maintained that he has operated within the highest legal and ethical standards, but his company has received criticism from U.S. officials and lawmakers, who are concerned about the potential risks of China's use of American technology for military purposes. ([Wall Street Journal](https://www.wsj.com/tech/five-things-to-know-about-the-intel-ceos-links-to-china-c8d5ce1a?st=uRw6K2&reflink=desktopwebshare_permalink))<!-- Draft news summary by Leo/Llama 3.1 8B -->  
 
-- https://www.wsj.com/tech/how-intels-ceo-helped-create-chinas-chip-industry-f660ca36?st=xydyMw&reflink=desktopwebshare_permalink
+- Intel CEO Lip-Bu Tan's venture-capital firm, Walden International, has been at the center of controversy due to its investments in China's chip industry, with some Republicans questioning how Tan advanced China's technology ambitions. Tan has denied any wrongdoing, stating that he shares the president's commitment to U.S. national and economic security, and has been working with the administration to address concerns. ([Wall Street Journal](https://www.wsj.com/tech/how-intels-ceo-helped-create-chinas-chip-industry-f660ca36?st=xydyMw&reflink=desktopwebshare_permalink)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 <!--
 
@@ -41,15 +41,15 @@ https://dribbble.com/roobinium)
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- ([Associated Press](https://apnews.com/article/gpt5-openai-chatgpt-artificial-intelligence-d12cd2d6310a2515042067b5d3965aa1))
+- OpenAI has released GPT-5, the latest version of its AI technology behind ChatGPT, which is being closely watched to see if generative AI is advancing or plateauing. The new model, described as a "significant step" towards artificial general intelligence, offers improved usability and safety features, and is expected to be incorporated into Microsoft's AI assistant, Copilot. ([Associated Press](https://apnews.com/article/gpt5-openai-chatgpt-artificial-intelligence-d12cd2d6310a2515042067b5d3965aa1)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- ([Yahoo Finance](https://finance.yahoo.com/news/ethereum-just-hit-4-000-144720193.html))
+- Ethereum has broken through the $4,000 barrier, with analysts predicting it could reach even higher prices due to the passage of landmark stablecoin legislation in the US. The crypto market's liquidity is deeply tied to government debt markets, and Ethereum's prime stablecoin blockchain status is expected to drive up demand and potentially push the price as high as $10,000 this year. ([Yahoo Finance](https://finance.yahoo.com/news/ethereum-just-hit-4-000-144720193.html)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- ([The Defiant](https://thedefiant.io/news/regulation/sec-ripple-end-five-year-xrp-lawsuit-joint-appeal-dismissal-28d1a73c))
+- The U.S. Securities and Exchange Commission and Ripple Labs have jointly dismissed their respective appeals in a nearly five-year-long lawsuit over XRP, effectively ending the high-profile case. This move brings finality to the litigation and leaves prior court findings in place, potentially paving the way for new regulatory approaches to other cryptocurrencies. ([The Defiant](https://thedefiant.io/news/regulation/sec-ripple-end-five-year-xrp-lawsuit-joint-appeal-dismissal-28d1a73c)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- ([The Block](https://www.theblock.co/post/366198/coinbase-launches-dex-trading-for-us-users-amid-volume-decline))
+- Coinbase has launched a decentralized exchange (DEX) integration, allowing users to trade millions of digital assets within the Coinbase app without leaving it. This move comes as the company aims to position itself as an "everything exchange" and follows a decline in spot trading volumes and revenue for the second quarter. ([The Block](https://www.theblock.co/post/366198/coinbase-launches-dex-trading-for-us-users-amid-volume-decline)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- ([The Block](https://www.theblock.co/post/366224/harvard-had-more-money-in-blackrocks-bitcoin-etf-than-google-shares-at-end-of-last-quarter))
+- Harvard University has invested a significant amount in Bitcoin through BlackRock's spot Bitcoin ETF, with $117 million worth of shares at the end of the second quarter. This investment ranks as the university's fifth largest investment, surpassing its holdings in Alphabet, Google's parent company, with nearly $114 million worth of shares. ([The Block](https://www.theblock.co/post/366224/harvard-had-more-money-in-blackrocks-bitcoin-etf-than-google-shares-at-end-of-last-quarter)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 ### Market Snapshot
 
@@ -108,17 +108,17 @@ https://dribbble.com/roobinium)
 
 ### Looking Ahead
 
-- ([Associated Press](https://www.msn.com/en-us/news/us/judge-rules-ai-company-anthropic-didnt-break-copyright-law-but-must-face-trial-over-pirated-books/ar-AA1Hl1VN?ocid=BingNewsVerp&apiversion=v2&noservercache=1&domshim=1&renderwebcomponents=1&wcseo=1&batchservertelemetry=1&noservertelemetry=1))
+- A federal judge has ruled that AI company Anthropic's use of copyrighted books to train its chatbot Claude constitutes "fair use" under U.S. copyright law, but the company still faces trial over how it acquired those books from online pirated copies. The ruling allows Anthropic to continue using the copyrighted material, but also acknowledges the company's alleged theft of the works. ([Associated Press](https://www.msn.com/en-us/news/us/judge-rules-ai-company-anthropic-didnt-break-copyright-law-but-must-face-trial-over-pirated-books/ar-AA1Hl1VN?ocid=BingNewsVerp&apiversion=v2&noservercache=1&domshim=1&renderwebcomponents=1&wcseo=1&batchservertelemetry=1&noservertelemetry=1)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- ([Cointelegraph](https://cointelegraph.com/news/behind-the-scenes-of-public-companies-that-are-rushing-to-create-crypto-treasuries))
+- **Publicly traded companies are increasingly turning to crypto treasuries as a way to hold digital assets and attract investors.** Companies like BNB Network Company and DeFi Development Corporation are creating funds to hold assets like BNB and Solana, with one company raising $2.3 billion in demand for its $500 million BNB-focused treasury vehicle. ([Cointelegraph](https://cointelegraph.com/news/behind-the-scenes-of-public-companies-that-are-rushing-to-create-crypto-treasuries)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- ([Washington Post](https://www.washingtonpost.com/opinions/2025/08/07/apple-ios-update-spam-polling-democracy/))
+- Apple's upcoming iOS 26 update is set to affect public opinion research by segregating texts from unknown senders, potentially making it harder for pollsters to reach voters. This change could have a significant impact on high-quality polling and local news, as well as hinder efforts to hold elected officials accountable. ([Washington Post](https://www.washingtonpost.com/opinions/2025/08/07/apple-ios-update-spam-polling-democracy/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 ### Odds & Ends
 
-- ([Reuters](https://www.reuters.com/sports/wnba-sex-toy-incidents-linked-cryptocurrency-group-2025-08-07/))
+- The WNBA has been linked to incidents involving sex toys, which are allegedly tied to a cryptocurrency group. This unusual connection has raised eyebrows in the sports and tech communities. ([Reuters](https://www.reuters.com/sports/wnba-sex-toy-incidents-linked-cryptocurrency-group-2025-08-07/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- ([Washington Post](https://www.washingtonpost.com/nation/interactive/2025/klamath-river-kayak-journey/))
+- A group of 15 Indigenous teens, trained by the non-profit Paddle Tribal Waters, successfully completed the first full descent of the newly liberated Klamath River, a 300-mile journey through intense rapids and stunning natural scenery. The historic achievement marks a milestone in the environmental restoration of the river, which was freed from four dams in 2022, and highlights the resilience and determination of the young paddlers and their communities. ([Washington Post](https://www.washingtonpost.com/nation/interactive/2025/klamath-river-kayak-journey/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
