writing through news summaries

--- a/2025/2025-08-10-wir.md
+++ b/2025/2025-08-10-wir.md
@@ -1,9 +1,6 @@
 # tktk
 ## tktk
 
-![Black-and-white photo illustration of a woman reading a newspaper](https://w3w.news/img/newsreader-illo-melpo-tsiliaki-DALLE3-1920.jpg)
-*Photo illustration by Melpo Tsiliaki × DALL·E 3*
-
 <hr>
 
 - _**I used several AI apps** to assist production of this edition of w3w. Final edit 100% by me. For fuller detail, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._
@@ -37,15 +34,18 @@ https://dribbble.com/roobinium)
 
 -->
 
+![Black-and-white photo illustration of a woman reading a newspaper](https://w3w.news/img/newsreader-illo-melpo-tsiliaki-DALLE3-1920.jpg)
+*Photo illustration by Melpo Tsiliaki × DALL·E 3*
+
 ### Five Things: Aug. 3-9, 2025
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- OpenAI has released GPT-5, the latest version of its AI technology behind ChatGPT, which is being closely watched to see if generative AI is advancing or plateauing. The new model, described as a "significant step" towards artificial general intelligence, offers improved usability and safety features, and is expected to be incorporated into Microsoft's AI assistant, Copilot. ([Associated Press](https://apnews.com/article/gpt5-openai-chatgpt-artificial-intelligence-d12cd2d6310a2515042067b5d3965aa1)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **OpenAI released GPT-5,** a highly anticipated update to the language model that powers its popular ChatGPT app. CEO Sam Altman described the latest version as a "significant step along our path" to a creating more human-like artificial general intelligence. But OpenAI's promotion of GPT-5 has focused so far on its usability improvements, not computational breakthroughs. ([Associated Press](https://apnews.com/article/gpt5-openai-chatgpt-artificial-intelligence-d12cd2d6310a2515042067b5d3965aa1))
 
-- Ethereum has broken through the $4,000 barrier, with analysts predicting it could reach even higher prices due to the passage of landmark stablecoin legislation in the US. The crypto market's liquidity is deeply tied to government debt markets, and Ethereum's prime stablecoin blockchain status is expected to drive up demand and potentially push the price as high as $10,000 this year. ([Yahoo Finance](https://finance.yahoo.com/news/ethereum-just-hit-4-000-144720193.html)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Ether's price hit $4,000 on Friday** for the first time in 2025. The token's rally has been fueled by hopes for a boom in stablecoin issuance on the Ethereum blockchain following the recent passage of clearer rules for that category in the U.S. ([Yahoo Finance](https://finance.yahoo.com/news/ethereum-just-hit-4-000-144720193.html))
 
-- The U.S. Securities and Exchange Commission and Ripple Labs have jointly dismissed their respective appeals in a nearly five-year-long lawsuit over XRP, effectively ending the high-profile case. This move brings finality to the litigation and leaves prior court findings in place, potentially paving the way for new regulatory approaches to other cryptocurrencies. ([The Defiant](https://thedefiant.io/news/regulation/sec-ripple-end-five-year-xrp-lawsuit-joint-appeal-dismissal-28d1a73c)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **The U.S. Securities and Exchange Commission and Ripple Labs have jointly dismissed their respective appeals in a nearly five-year-long lawsuit over XRP, effectively ending the high-profile case. This move brings finality to the litigation and leaves prior court findings in place, potentially paving the way for new regulatory approaches to other cryptocurrencies. ([The Defiant](https://thedefiant.io/news/regulation/sec-ripple-end-five-year-xrp-lawsuit-joint-appeal-dismissal-28d1a73c)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 - Coinbase has launched a decentralized exchange (DEX) integration, allowing users to trade millions of digital assets within the Coinbase app without leaving it. This move comes as the company aims to position itself as an "everything exchange" and follows a decline in spot trading volumes and revenue for the second quarter. ([The Block](https://www.theblock.co/post/366198/coinbase-launches-dex-trading-for-us-users-amid-volume-decline)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
@@ -53,7 +53,7 @@ https://dribbble.com/roobinium)
 
 ### Market Snapshot
 
-*A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, including additional indexes and asset classes, see my spreadsheet [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
+*A quick look at some major indicators as of Friday's market close on Wall Street:*
 
 <table>
 
@@ -61,45 +61,45 @@ https://dribbble.com/roobinium)
     <tr>
       <th>Indicator</th>
       <th>Close</th>
-      <th>Weekly %</th>
-      <th>YTD %</th>
+      <th>Weekly</th>
+      <th>YTD</th>
     </tr>
   </thead>
 
   <tbody>
    <tr>
      <td>Bitcoin</td>
-     <td>$103,506.35</td>
-     <td><!-- BTC weekly % change --></td>
-     <td><!-- BTC YTD % change --></td>
+     <td>$116,460.38</td>
+     <td>+2.8%</td>
+     <td>+24.1%</td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
-     <td></td>
-     <td></td>
-     <td></td>
+     <td>23,611.27</td>
+     <td>+3.7%</td>
+     <td>+12.4%</td>
    </tr>
 
    <tr>
      <td>Gold</td>
-     <td>$/oz</td>
-     <td></td>
-     <td></td>
+     <td>$3,458.20/oz</td>
+     <td>+3.3%</td>
+     <td>+31.5%</td>
    </tr>
 
    <tr>
      <td>USD Index</td>
-     <td></td>
-     <td></td>
-     <td></td>
+     <td>98.26</td>
+     <td>-0.4%</td>
+     <td>-9.4%</td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td>%</td>
-     <td></td>
-     <td></td>
+     <td>4.2850%</td>
+     <td>+0.0650</td>
+     <td>-0.2880</td>
    </tr>
 
 </tbody>
@@ -108,17 +108,18 @@ https://dribbble.com/roobinium)
 
 ### Looking Ahead
 
-- A federal judge has ruled that AI company Anthropic's use of copyrighted books to train its chatbot Claude constitutes "fair use" under U.S. copyright law, but the company still faces trial over how it acquired those books from online pirated copies. The ruling allows Anthropic to continue using the copyrighted material, but also acknowledges the company's alleged theft of the works. ([Associated Press](https://www.msn.com/en-us/news/us/judge-rules-ai-company-anthropic-didnt-break-copyright-law-but-must-face-trial-over-pirated-books/ar-AA1Hl1VN?ocid=BingNewsVerp&apiversion=v2&noservercache=1&domshim=1&renderwebcomponents=1&wcseo=1&batchservertelemetry=1&noservertelemetry=1)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **A federal judge in San Francisco ruled** that AI company Anthropic's use of copyrighted books to train its chatbot Claude constitutes "fair use" under U.S. copyright law. But the company still faces trial over how it acquired those books. The case represents a high-profile test for creators who want to be compensated for their works' use in training AI models. ([Associated Press](https://www.msn.com/en-us/news/us/judge-rules-ai-company-anthropic-didnt-break-copyright-law-but-must-face-trial-over-pirated-books/ar-AA1Hl1VN?ocid=BingNewsVerp&apiversion=v2&noservercache=1&domshim=1&renderwebcomponents=1&wcseo=1&batchservertelemetry=1&noservertelemetry=1)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- **Publicly traded companies are increasingly turning to crypto treasuries as a way to hold digital assets and attract investors.** Companies like BNB Network Company and DeFi Development Corporation are creating funds to hold assets like BNB and Solana, with one company raising $2.3 billion in demand for its $500 million BNB-focused treasury vehicle. ([Cointelegraph](https://cointelegraph.com/news/behind-the-scenes-of-public-companies-that-are-rushing-to-create-crypto-treasuries)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Cointelegraph’s Savannah Fortis** recently spoke with two executives on her podcast about their work building corporate crypto treasuries. If you're looking for a good 20-minute overview of that trend, including examples of specific implementations, I would definitely recommend checking out [the episode](https://cointelegraph.com/news/behind-the-scenes-of-public-companies-that-are-rushing-to-create-crypto-treasuries).  
 
-- Apple's upcoming iOS 26 update is set to affect public opinion research by segregating texts from unknown senders, potentially making it harder for pollsters to reach voters. This change could have a significant impact on high-quality polling and local news, as well as hinder efforts to hold elected officials accountable. ([Washington Post](https://www.washingtonpost.com/opinions/2025/08/07/apple-ios-update-spam-polling-democracy/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Pollster Patrick Ruffini** says Apple's upcoming iOS 26 update could significantly set back public opinion research in the U.S. by segregating texts from unknown senders. The change would make it harder for pollsters to reach voters with questions about their views on specific political issues and candidates, Ruffini says. ([Washington Post](https://www.washingtonpost.com/opinions/2025/08/07/apple-ios-update-spam-polling-democracy/))
 
 ### Odds & Ends
 
-- The WNBA has been linked to incidents involving sex toys, which are allegedly tied to a cryptocurrency group. This unusual connection has raised eyebrows in the sports and tech communities. ([Reuters](https://www.reuters.com/sports/wnba-sex-toy-incidents-linked-cryptocurrency-group-2025-08-07/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **A group of Native American teens completed** what is believed to be the first full descent of the Pacific Coast's Klamath River. The U.S. government recently finished removing four decades-old dams from the waterway, which tribal elders regard as sacred. ([Washington Post](https://www.washingtonpost.com/nation/interactive/2025/klamath-river-kayak-journey/))
 
-- A group of 15 Indigenous teens, trained by the non-profit Paddle Tribal Waters, successfully completed the first full descent of the newly liberated Klamath River, a 300-mile journey through intense rapids and stunning natural scenery. The historic achievement marks a milestone in the environmental restoration of the river, which was freed from four dams in 2022, and highlights the resilience and determination of the young paddlers and their communities. ([Washington Post](https://www.washingtonpost.com/nation/interactive/2025/klamath-river-kayak-journey/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **A spokesman for the group** behind Green Dildo Coin, an obscure meme token, took credit for recent incidents in which sex toys were thrown onto the court during WNBA games. The group claims it's trying to attract publicity to raise awareness about protections (or lack thereof) for small crypto investors. Exactly WTF that issue has to do with the WNBA is unclear, however. ([Reuters](https://www.reuters.com/sports/wnba-sex-toy-incidents-linked-cryptocurrency-group-2025-08-07/))
+
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
