--- a/2025/2025-08-10-wir.md
+++ b/2025/2025-08-10-wir.md
@@ -1,27 +1,64 @@
 # tktk
 ## tktk
 
+![A lone tangerine against an aqua-colored background](https://w3w.news/img/mae-wu-1920.jpg)
+*Photo illustration by Mae Wu via Unsplash*
+
 <hr>
 
 - _**I used several AI apps** to assist production of this edition of w3w. Final edit 100% by me. For fuller detail, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._
 
-- _**A big thank-you to w3w's paid subscribers!** To join them in supporting this work, please check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
+<!-- - _**A big thank-you to w3w's paid subscribers!** To join them in supporting this work, please check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._ -->
 
 - _**I'm also happy to highlight our affiliate,** award-winning designer Kate Zimina of [Roobinium](https://dribbble.com/roobinium). To get Kate's help on your next web3 project, email digitaldesigner2047@gmail.com or DM the Telegram handle @digitaldesigner2047._
 
 <hr>
 
-**Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
+**The bar is admittedly pretty high** right now for [shocking news stories](https://news.google.com/read/CBMinAFBVV95cUxOaVdkazk3QmdXczR0b01JZW1RUEFqb1NJRXVNMXVLV3FjOGlXWGk0ZXVObWVHVmlWR0dEa01SVl9WWnJVX0wxVWJvVFNHMUxkdjZWZkJqZlktLV9Ea3llWDhQTWNhcVBvZVlyTTZlRnljamZsYlVuT2ZSTTkzaS0zYnNZX1VMQXkwdVZ3QTdwVjNMdEItZXcyd1hmc0s?hl=en-US&gl=US&ceid=US%3Aen) about the Trump administration. So all is definitely forgiven if you missed a tech-related one that broke Thursday.
 
-<!-- Riff on Trump/Intel brouhaha. Some useful links from WSJ: -->
+In [a post](https://truthsocial.com/@realDonaldTrump/posts/114987288040725570) to his Truth Social network, President Trump abruptly called for the resignation of Intel CEO Lip-Bu Tan. Trump described Tan as "highly conflicted," but didn't offer any further details.
 
-- Intel's CEO, Lip-Bu Tan, is facing pressure from the company's board and a surprise attack from former President Trump, who has called for Tan's ouster citing "conflict" due to his business ties to China. The tensions come as Tan has been at odds with the board over strategies to revive the tech giant, including whether to stay in the manufacturing business and how to invest in artificial intelligence. ([Wall Street Journal](https://www.wsj.com/tech/intel-ceo-lip-bu-tan-trump-board-9cc08631?st=KUDbuC&reflink=desktopwebshare_permalink))<!-- Draft news summary by Leo/Llama 3.1 8B -->
+The president seemed to be referencing a dispute brewing over in the Senate, where Arkansas Republican Tom Cotton has [raised questions](https://www.cnbc.com/2025/08/06/us-lawmaker-questions-intel-ceos-ties-to-china-in-letter-to-company-board-chair.html) about Tan's [ties](https://www.wsj.com/tech/five-things-to-know-about-the-intel-ceos-links-to-china-c8d5ce1a?st=uRw6K2&reflink=desktopwebshare_permalink) to Chinese tech firms.
 
-- Intel's new CEO, Lip-Bu Tan, brings a wealth of experience to the role, having previously led Cadence Design Systems and founded Walden International, a venture capital firm with ties to China. Tan's appointment comes as Intel faces challenges in the industry, with some speculating that the company may break up its manufacturing and product businesses. ([Wall Street Journal](https://www.wsj.com/tech/intel-new-ceo-lip-bu-tan-five-things-214c41b6?st=Ls9Bxm&reflink=desktopwebshare_permalink))<!-- Draft news summary by Leo/Llama 3.1 8B -->  
+But if national security is the real rub here, we should keep in mind that Tan's early record as CEO of the grandaddy of Silicon Valley chipmakers contains some loud signals in Tan's favor.
 
-- Intel CEO Lip-Bu Tan is facing scrutiny over his ties to China, particularly his past involvement with companies that sold technology to Chinese state-controlled research institutions, including one accused of developing military systems. Tan has maintained that he has operated within the highest legal and ethical standards, but his company has received criticism from U.S. officials and lawmakers, who are concerned about the potential risks of China's use of American technology for military purposes. ([Wall Street Journal](https://www.wsj.com/tech/five-things-to-know-about-the-intel-ceos-links-to-china-c8d5ce1a?st=uRw6K2&reflink=desktopwebshare_permalink))<!-- Draft news summary by Leo/Llama 3.1 8B -->  
+In the Wall Street Journal's coverage of Trump's accusations, reporter Lauren Thomas [described an episode](https://www.wsj.com/tech/intel-ceo-lip-bu-tan-trump-board-9cc08631?st=KUDbuC&reflink=desktopwebshare_permalink) shortly after Tan assumed the chipmaker's top job in March. Citing people familiar with the matter, she reports:
 
-- Intel CEO Lip-Bu Tan's venture-capital firm, Walden International, has been at the center of controversy due to its investments in China's chip industry, with some Republicans questioning how Tan advanced China's technology ambitions. Tan has denied any wrongdoing, stating that he shares the president's commitment to U.S. national and economic security, and has been working with the administration to address concerns. ([Wall Street Journal](https://www.wsj.com/tech/how-intels-ceo-helped-create-chinas-chip-industry-f660ca36?st=xydyMw&reflink=desktopwebshare_permalink)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+<!--
+
+- Trump post: https://truthsocial.com/@realDonaldTrump/posts/114987288040725570
+
+- Intel's CEO, Lip-Bu Tan, is facing pressure from the company's board and a surprise attack from former President Trump, who has called for Tan's ouster citing "conflict" due to his business ties to China. The tensions come as Tan has been at odds with the board over strategies to revive the tech giant, including whether to stay in the manufacturing business and how to invest in artificial intelligence. ([Wall Street Journal](https://www.wsj.com/tech/intel-ceo-lip-bu-tan-trump-board-9cc08631?st=KUDbuC&reflink=desktopwebshare_permalink))
+
+-->
+
+>*Tan and Intel board chairman Frank Yeary disagreed about whether Intel should remain in the business of making chips for itself and its clients or exit manufacturing, the people said.*
+>
+>*The segment that includes Intel’s chip factories, which last year supplied around a third of Intel’s revenue, has been a money loser. But some view it as politically important because it helps secure the U.S.’s semiconductor supply chain.*
+>
+>*Yeary, a former investment banker, had drawn up a plan for Intel to exit from the foundry business entirely earlier this year when acting as interim executive chair. Yeary’s proposal involved spinning out the business and having other companies such as Nvidia and Amazon take stakes in it, the people said. Yeary also explored brokering a sale of the business to Taiwan’s TSMC, the people said, but that effort went nowhere.*
+>
+>*Tan, on the other hand, has argued that Intel’s foundry business is integral to its success and needed to ensure the U.S. doesn’t become reliant on foreign semiconductor companies such as TSMC and Samsung, the people said. (While TSMC and Samsung have committed to building more plants in the U.S., critics say their research and development efforts are still centralized elsewhere.)*
+
+Call me nuts, but it strikes me that the guy arguing to keep chip plants in the U.S., precisely so that we *don't* become entirely reliant on overseas suppliers, might actually be on America's side.
+
+It also might be a bad look for an administration that's always yammering about the importance of domestic manufacturing to persecute such a person based on old information or vague suspicions or whatever else Trump happens to be ranting about on social media first thing in the morning.
+
+
+
+<!--
+
+Draft news summaries by Leo/Llama 3.1 8B...
+
+- Intel's new CEO, Lip-Bu Tan, brings a wealth of experience to the role, having previously led Cadence Design Systems and founded Walden International, a venture capital firm with ties to China. Tan's appointment comes as Intel faces challenges in the industry, with some speculating that the company may break up its manufacturing and product businesses. ([Wall Street Journal](https://www.wsj.com/tech/intel-new-ceo-lip-bu-tan-five-things-214c41b6?st=Ls9Bxm&reflink=desktopwebshare_permalink))
+
+- Intel CEO Lip-Bu Tan is facing scrutiny over his ties to China, particularly his past involvement with companies that sold technology to Chinese state-controlled research institutions, including one accused of developing military systems. Tan has maintained that he has operated within the highest legal and ethical standards, but his company has received criticism from U.S. officials and lawmakers, who are concerned about the potential risks of China's use of American technology for military purposes. ([Wall Street Journal](https://www.wsj.com/tech/five-things-to-know-about-the-intel-ceos-links-to-china-c8d5ce1a?st=uRw6K2&reflink=desktopwebshare_permalink))
+
+- Intel CEO Lip-Bu Tan's venture-capital firm, Walden International, has been at the center of controversy due to its investments in China's chip industry, with some Republicans questioning how Tan advanced China's technology ambitions. Tan has denied any wrongdoing, stating that he shares the president's commitment to U.S. national and economic security, and has been working with the administration to address concerns. ([Wall Street Journal](https://www.wsj.com/tech/how-intels-ceo-helped-create-chinas-chip-industry-f660ca36?st=xydyMw&reflink=desktopwebshare_permalink))
+
+-->
+
 
 <!--
 
@@ -34,22 +71,19 @@ https://dribbble.com/roobinium)
 
 -->
 
-![Black-and-white photo illustration of a woman reading a newspaper](https://w3w.news/img/newsreader-illo-melpo-tsiliaki-DALLE3-1920.jpg)
-*Photo illustration by Melpo Tsiliaki × DALL·E 3*
-
 ### Five Things: Aug. 3-9, 2025
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
 - **OpenAI released GPT-5,** a highly anticipated update to the language model that powers its popular ChatGPT app. CEO Sam Altman described the latest version as a "significant step along our path" to a creating more human-like artificial general intelligence. But OpenAI's promotion of GPT-5 has focused so far on its usability improvements, not computational breakthroughs. ([Associated Press](https://apnews.com/article/gpt5-openai-chatgpt-artificial-intelligence-d12cd2d6310a2515042067b5d3965aa1))
 
-- **Ether's price hit $4,000 on Friday** for the first time in 2025. The token's rally has been fueled by hopes for a boom in stablecoin issuance on the Ethereum blockchain following the recent passage of clearer rules for that category in the U.S. ([Yahoo Finance](https://finance.yahoo.com/news/ethereum-just-hit-4-000-144720193.html))
+- **The U.S. Securities and Exchange Commission** dropped its five-year-long case accusing Ripple Labs of offering an unregistered security through its XRP token. Previous court rulings in the case remain in place, including one levying a $125 million fine against Ripple. But the SEC will pursue no further penalties, and Ripple will drop its appeals. The case has long been closely watched throughout the crypto industry for potential precedents that might apply broadly to market participants. ([Reuters](https://www.reuters.com/legal/government/sec-ends-lawsuit-against-ripple-company-pay-125-million-fine-2025-08-08/))
 
-- **The U.S. Securities and Exchange Commission and Ripple Labs have jointly dismissed their respective appeals in a nearly five-year-long lawsuit over XRP, effectively ending the high-profile case. This move brings finality to the litigation and leaves prior court findings in place, potentially paving the way for new regulatory approaches to other cryptocurrencies. ([The Defiant](https://thedefiant.io/news/regulation/sec-ripple-end-five-year-xrp-lawsuit-joint-appeal-dismissal-28d1a73c)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Ether's price hit $4,000 on Friday** for the first time in 2025. The token's rally has been fueled in part by hopes for a boom in stablecoin issuance on the Ethereum blockchain now that the America has clarified its rules for that category. ([Yahoo Finance](https://finance.yahoo.com/news/ethereum-just-hit-4-000-144720193.html))
 
-- Coinbase has launched a decentralized exchange (DEX) integration, allowing users to trade millions of digital assets within the Coinbase app without leaving it. This move comes as the company aims to position itself as an "everything exchange" and follows a decline in spot trading volumes and revenue for the second quarter. ([The Block](https://www.theblock.co/post/366198/coinbase-launches-dex-trading-for-us-users-amid-volume-decline)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Coinbase said it will launch a decentralized exchange,** allowing users to trade millions of additional digital assets directly with each other on-chain. The move comes as the company aims to position itself as an "everything exchange" and follows a decline in spot trading volumes and revenue for the second quarter. ([The Block](https://www.theblock.co/post/366198/coinbase-launches-dex-trading-for-us-users-amid-volume-decline))
 
-- Harvard University has invested a significant amount in Bitcoin through BlackRock's spot Bitcoin ETF, with $117 million worth of shares at the end of the second quarter. This investment ranks as the university's fifth largest investment, surpassing its holdings in Alphabet, Google's parent company, with nearly $114 million worth of shares. ([The Block](https://www.theblock.co/post/366224/harvard-had-more-money-in-blackrocks-bitcoin-etf-than-google-shares-at-end-of-last-quarter)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **An Ivy-covered milestone:** According to regulatory filings, Harvard University's endowment owned $117 million worth of shares in BlackRock's exchange-traded bitcoin fund as of June 30. That narrowly surpassed Harvard's stock holdings in Google parent Alphabet, which stood at $114 million. ([The Block](https://www.theblock.co/post/366224/harvard-had-more-money-in-blackrocks-bitcoin-etf-than-google-shares-at-end-of-last-quarter))
 
 ### Market Snapshot
 
@@ -112,14 +146,13 @@ https://dribbble.com/roobinium)
 
 - **Cointelegraph’s Savannah Fortis** recently spoke with two executives on her podcast about their work building corporate crypto treasuries. If you're looking for a good 20-minute overview of that trend, including examples of specific implementations, I would definitely recommend checking out [the episode](https://cointelegraph.com/news/behind-the-scenes-of-public-companies-that-are-rushing-to-create-crypto-treasuries).  
 
-- **Pollster Patrick Ruffini** says Apple's upcoming iOS 26 update could significantly set back public opinion research in the U.S. by segregating texts from unknown senders. The change would make it harder for pollsters to reach voters with questions about their views on specific political issues and candidates, Ruffini says. ([Washington Post](https://www.washingtonpost.com/opinions/2025/08/07/apple-ios-update-spam-polling-democracy/))
+- **Pollster Patrick Ruffini** says Apple's upcoming iOS 26 update could significantly set back public opinion research in the U.S. by segregating texts from unknown senders. The change would make it harder for pollsters to reach voters with questions about their views on specific political issues and candidates, Ruffini says. ([Washington Post](https://wapo.st/4lmGV7V))
 
 ### Odds & Ends
 
-- **A group of Native American teens completed** what is believed to be the first full descent of the Pacific Coast's Klamath River. The U.S. government recently finished removing four decades-old dams from the waterway, which tribal elders regard as sacred. ([Washington Post](https://www.washingtonpost.com/nation/interactive/2025/klamath-river-kayak-journey/))
-
 - **A spokesman for the group** behind Green Dildo Coin, an obscure meme token, took credit for recent incidents in which sex toys were thrown onto the court during WNBA games. The group claims it's trying to attract publicity to raise awareness about protections (or lack thereof) for small crypto investors. Exactly WTF that issue has to do with the WNBA is unclear, however. ([Reuters](https://www.reuters.com/sports/wnba-sex-toy-incidents-linked-cryptocurrency-group-2025-08-07/))
 
+- **A group of Native American teens completed** what is believed to be the first full descent of the Pacific Coast's Klamath River. The U.S. government recently finished removing four decades-old dams from the waterway, which tribal elders regard as sacred. ([Washington Post](https://www.washingtonpost.com/nation/interactive/2025/klamath-river-kayak-journey/))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
