Copyedits + final headline, all assisted by Copilot

--- a/2025/2025-08-10-wir.md
+++ b/2025/2025-08-10-wir.md
@@ -1,5 +1,6 @@
-# tktk
-## tktk
+# Intel CEO unexpectedly faces Trump's ire 
+
+## Presidential pressure for Lip-Bu Tan's ouster raises fresh questions about national security, manufacturing, and who’s really protecting America’s tech edge
 
 ![A lone tangerine against an aqua-colored background](https://w3w.news/img/mae-wu-1920.jpg)
 *Photo illustration by Mae Wu via Unsplash*
@@ -20,18 +21,9 @@ In [a post](https://truthsocial.com/@realDonaldTrump/posts/114987288040725570) t
 
 The president seemed to be referencing a dispute brewing over in the Senate, where Arkansas Republican Tom Cotton has [raised questions](https://www.cnbc.com/2025/08/06/us-lawmaker-questions-intel-ceos-ties-to-china-in-letter-to-company-board-chair.html) about Tan's [ties](https://www.wsj.com/tech/five-things-to-know-about-the-intel-ceos-links-to-china-c8d5ce1a?st=uRw6K2&reflink=desktopwebshare_permalink) to Chinese tech firms.
 
-But if national security is the real rub here, we should keep in mind that Tan's early record as CEO of the grandaddy of Silicon Valley chipmakers contains some loud signals in Tan's favor.
+If national security is the real rub here, though, we should keep in mind that Tan's early record as CEO of the grandaddy of Silicon Valley chipmakers contains some loud signals in Tan's favor.
 
-In the Wall Street Journal's coverage of Trump's accusations, reporter Lauren Thomas [described an episode](https://www.wsj.com/tech/intel-ceo-lip-bu-tan-trump-board-9cc08631?st=KUDbuC&reflink=desktopwebshare_permalink) shortly after Tan assumed the chipmaker's top job in March. Citing people familiar with the matter, she reports:
-
-
-<!--
-
-- Trump post: https://truthsocial.com/@realDonaldTrump/posts/114987288040725570
-
-- Intel's CEO, Lip-Bu Tan, is facing pressure from the company's board and a surprise attack from former President Trump, who has called for Tan's ouster citing "conflict" due to his business ties to China. The tensions come as Tan has been at odds with the board over strategies to revive the tech giant, including whether to stay in the manufacturing business and how to invest in artificial intelligence. ([Wall Street Journal](https://www.wsj.com/tech/intel-ceo-lip-bu-tan-trump-board-9cc08631?st=KUDbuC&reflink=desktopwebshare_permalink))
-
--->
+In the Wall Street Journal's coverage of Trump's accusations, reporter Lauren Thomas [described an episode](https://www.wsj.com/tech/intel-ceo-lip-bu-tan-trump-board-9cc08631?st=KUDbuC&reflink=desktopwebshare_permalink) shortly after Tan assumed Intel's top job in March. Citing people familiar with the matter, she reports:
 
 >*Tan and Intel board chairman Frank Yeary disagreed about whether Intel should remain in the business of making chips for itself and its clients or exit manufacturing, the people said.*
 >
@@ -43,22 +35,9 @@ In the Wall Street Journal's coverage of Trump's accusations, reporter Lauren Th
 
 Call me nuts, but it strikes me that the guy arguing to keep chip plants in the U.S., precisely so that we *don't* become entirely reliant on overseas suppliers, might actually be on America's side.
 
-It also might be a bad look for an administration that's always yammering about the importance of domestic manufacturing to persecute such a person based on old information or vague suspicions or whatever else Trump happens to be ranting about on social media first thing in the morning.
+It also might be a bad look for an administration that's always yammering about the importance of domestic manufacturing to persecute such a man.
 
-
-
-<!--
-
-Draft news summaries by Leo/Llama 3.1 8B...
-
-- Intel's new CEO, Lip-Bu Tan, brings a wealth of experience to the role, having previously led Cadence Design Systems and founded Walden International, a venture capital firm with ties to China. Tan's appointment comes as Intel faces challenges in the industry, with some speculating that the company may break up its manufacturing and product businesses. ([Wall Street Journal](https://www.wsj.com/tech/intel-new-ceo-lip-bu-tan-five-things-214c41b6?st=Ls9Bxm&reflink=desktopwebshare_permalink))
-
-- Intel CEO Lip-Bu Tan is facing scrutiny over his ties to China, particularly his past involvement with companies that sold technology to Chinese state-controlled research institutions, including one accused of developing military systems. Tan has maintained that he has operated within the highest legal and ethical standards, but his company has received criticism from U.S. officials and lawmakers, who are concerned about the potential risks of China's use of American technology for military purposes. ([Wall Street Journal](https://www.wsj.com/tech/five-things-to-know-about-the-intel-ceos-links-to-china-c8d5ce1a?st=uRw6K2&reflink=desktopwebshare_permalink))
-
-- Intel CEO Lip-Bu Tan's venture-capital firm, Walden International, has been at the center of controversy due to its investments in China's chip industry, with some Republicans questioning how Tan advanced China's technology ambitions. Tan has denied any wrongdoing, stating that he shares the president's commitment to U.S. national and economic security, and has been working with the administration to address concerns. ([Wall Street Journal](https://www.wsj.com/tech/how-intels-ceo-helped-create-chinas-chip-industry-f660ca36?st=xydyMw&reflink=desktopwebshare_permalink))
-
--->
-
+Even worse to do so based on old information or vague suspicions or whatever else Trump happens to be ranting about on social media first thing in the morning.
 
 <!--
 
