Adding more links to news stories

--- a/2025/2025-08-17-wir.md
+++ b/2025/2025-08-17-wir.md
@@ -59,11 +59,12 @@ We’re on our own in this regard. Act accordingly.
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- The American Bankers Association and over 50 state banking groups are urging Congress to close loopholes in the recently enacted GENIUS Act, warning that the lack of clear regulations could trigger a massive deposit flight from traditional banking to stablecoin issuers. This shift could disrupt the flow of credit to businesses and households, increasing lending costs and reducing loans, according to the coalition. ([Decrypt](https://decrypt.co/334930/bank-groups-urge-us-senate-to-close-gaps-in-countrys-new-stablecoin-law)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- New open-source AGI framework from Sentient. https://cointelegraph.com/news/sentient-ai-search-outperforms-gpt4o-perplexity
 
-- New ETH, BTC records? <!-- Some headlines about this mid-week. Keep an eye out through Friday's close for any necessary market updates in the Sunday email blast. --> https://www.theblock.co/post/366699/spot-ethereum-etfs-524-million-inflows | https://www.theblock.co/post/366689/ethereum-foundation-offloads-13-million-worth-eth
+- **Crypto markets ran hot and cold.** New ETH records (and BTC?) early in the weak. But then renewed worries about wholesale-level U.S. inflation squelched the buying on Friday. <!-- Some headlines about this mid-week. Keep an eye out through Friday's close for any necessary market updates in the Sunday email blast. --> https://www.theblock.co/post/366699/spot-ethereum-etfs-524-million-inflows | https://www.theblock.co/post/366689/ethereum-foundation-offloads-13-million-worth-eth
 
-- New open-source AGI framework from Sentient. <!-- Link tk -->
+- Fed relaxes crypto oversight: https://decrypt.co/335488/fed-ends-supervisory-program-bank-crypto-bitcoin | The American Bankers Association and over 50 state banking groups are urging Congress to close loopholes in the recently enacted GENIUS Act, warning that the lack of clear regulations could trigger a massive deposit flight from traditional banking to stablecoin issuers. This shift could disrupt the flow of credit to businesses and households, increasing lending costs and reducing loans, according to the coalition. ([Decrypt](https://decrypt.co/334930/bank-groups-urge-us-senate-to-close-gaps-in-countrys-new-stablecoin-law)) <!-- Draft summary by Leo/Llama 3.1 8B --> |
+
 
 
 - The Norway sovereign wealth fund's indirect bitcoin exposure has grown significantly, reaching 7,161 BTC ($862.8 million) as of June 30, primarily due to its investments in companies like Strategy, Block, Coinbase, MARA, and Metaplanet. This exposure represents a 87.7% increase in the past six months and 192.7% over the past year, highlighting the growing mainstream acceptance of bitcoin in diversified portfolios. https://www.theblock.co/post/366752/norway-sovereign-wealth-fund-bitcoin-exposure
@@ -138,9 +139,9 @@ We’re on our own in this regard. Act accordingly.
 
 ### Odds & Ends
 
-- A new anti-poaching measure: Make rhino horns radioactive. <!-- Pickup link from PBS Newshour or other orgs that have covered. -->
+- A new anti-poaching measure: Make rhino horns radioactive. https://www.npr.org/2025/08/01/nx-s1-5488737/scientists-south-africa-rhino-horns-radioactive-poaching
 
-- Meteor that hit a GA home is older than Earth. <!-- AP link tk -->
+- Meteor that hit a GA home is older than Earth. https://www.cbsnews.com/news/meteorite-georgia-nasa-earth/
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
